k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80 # Porta exposta no serviço
      targetPort: 5000 # Porta onde o app está rodando no container
  type: ClusterIP # Se precisar expor para fora, use LoadBalancer ou NodePort
